--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,4 +1,4 @@
-name: Build and Push to ACR
+name: Build and Push to Azure Container Registry
 
 on:
   push:
@@ -10,31 +10,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Log in to ACR
+      - name: Log in to Azure
         uses: azure/login@v1
         with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Azure CLI - Get ACR login server
-        id: acr-login-server
+      - name: Set ACR variables
+        id: acr
         run: |
           ACR_NAME="az204acr31941"
-          echo "##[set-output name=acr_login_server;]$(az acr show --name $ACR_NAME --query loginServer --output tsv)"
+          ACR_LOGIN_SERVER=$(az acr show --name $ACR_NAME --query loginServer -o tsv)
+          echo "ACR_NAME=$ACR_NAME" >> $GITHUB_ENV
+          echo "ACR_LOGIN_SERVER=$ACR_LOGIN_SERVER" >> $GITHUB_ENV
 
       - name: Docker login to ACR
         run: |
-          echo "${{ secrets.AZURE_CREDENTIALS }}" > creds.json
-          ACR_USERNAME=$(jq -r '.clientId' creds.json)
-          ACR_PASSWORD=$(jq -r '.clientSecret' creds.json)
-          ACR_LOGIN_SERVER="${{ steps.acr.outputs.loginServer }}"
-          echo $ACR_PASSWORD | docker login $ACR_LOGIN_SERVER -u $ACR_USERNAME --password-stdin
+          az acr login --name $ACR_NAME
 
-      - name: Build and push Docker image
+      - name: Build and Push Docker Image
         run: |
-          ACR_LOGIN_SERVER="${{ steps.acr.outputs.loginServer }}"
-          IMAGE_TAG="$ACR_LOGIN_SERVER/fastapi-app:latest"
+          IMAGE_TAG="$ACR_LOGIN_SERVER/fastapi-app-ci:latest"
           docker build -t $IMAGE_TAG .
           docker push $IMAGE_TAG
