--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -1,4 +1,4 @@
-name: Build and Push to Azure Container Registry
+name: Build and Push to ACR
 
 on:
   push:
@@ -10,28 +10,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Log in to Azure
+      - name: Azure Login
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Set ACR variables
+      - name: Get ACR login server
         id: acr
         run: |
-          ACR_NAME="az204acr31941"
-          ACR_LOGIN_SERVER=$(az acr show --name $ACR_NAME --query loginServer -o tsv)
-          echo "ACR_NAME=$ACR_NAME" >> $GITHUB_ENV
+          ACR_LOGIN_SERVER=$(az acr show --name ${{ vars.ACR_NAME }} --query loginServer -o tsv)
           echo "ACR_LOGIN_SERVER=$ACR_LOGIN_SERVER" >> $GITHUB_ENV
 
       - name: Docker login to ACR
         run: |
-          az acr login --name $ACR_NAME
+          az acr login --name ${{ vars.ACR_NAME }}
 
-      - name: Build and Push Docker Image
+      - name: Build and Push Docker image
         run: |
-          IMAGE_TAG="$ACR_LOGIN_SERVER/fastapi-app-ci:latest"
+          IMAGE_TAG="$ACR_LOGIN_SERVER/${{ vars.IMAGE_NAME }}:latest"
           docker build -t $IMAGE_TAG .
           docker push $IMAGE_TAG
