--- a/.github/workflows/deploy-to-aci.yml
+++ b/.github/workflows/deploy-to-aci.yml
@@ -29,7 +29,7 @@ jobs:
           az container delete \
             --name ${{ vars.ACI_NAME }} \
             --resource-group ${{ vars.RESOURCE_GROUP }} \
-            --yes --no-wait
+            --yes
 
       - name: Deploy container to ACI
         run: |
