create latest image and image with github sha id

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Build and Push Docker image
         run: |
           IMAGE_TAG1="$ACR_LOGIN_SERVER/${{ vars.IMAGE_NAME }}:latest"
-          IMAGE_TAG2="$ACR_LOGIN_SERVER/${{ vars.IMAGE_NAME }}:{{ Run.ID }}"
-          docker build -t $IMAGE_TAG .
+          IMAGE_TAG2="$ACR_LOGIN_SERVER/${{ vars.IMAGE_NAME }}:{{ github.sha }}"
+          docker build -t $IMAGE_TAG1 -t $IMAGE_TAG2 .
           docker push $IMAGE_TAG
+          docker push $IMAGE_TAG2
