--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -30,8 +30,7 @@ jobs:
 
       - name: Build and Push Docker image
         run: |
-          IMAGE_TAG1="$ACR_LOGIN_SERVER/${{ vars.IMAGE_NAME }}:latest"
-          IMAGE_TAG2="$ACR_LOGIN_SERVER/${{ vars.IMAGE_NAME }}:{{ github.sha }}"
-          docker build -t $IMAGE_TAG1 -t $IMAGE_TAG2 .
+          IMAGE_TAG1="$ACR_LOGIN_SERVER/${{ vars.IMAGE_NAME }}:latest"          
+          docker build -t $IMAGE_TAG1 .
           docker push $IMAGE_TAG1
           docker push $IMAGE_TAG2
